--- a/css/styles.css
+++ b/css/styles.css
@@ -11800,3 +11800,64 @@ header .container {
   color: black !important;
   font-weight: bold;
 }
+
+.scroll-down {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 2rem;
+  z-index: 1000; /* Asegura que esté por encima de otros elementos */
+}
+
+.scroll-down a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  width: 50px; /* Tamaño del área clickeable */
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.2); /* Fondo semi-transparente para visibilidad */
+  transition: background 0.3s;
+}
+
+.scroll-down a:hover {
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.scroll-down i {
+  font-size: 2rem;
+  animation: bounce 1.5s infinite;
+}
+
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(10px); }
+}
+
+.scroll-top-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s, visibility 0.3s;
+}
+
+.scroll-top-btn.show {
+    opacity: 1;
+    visibility: visible;
+}
