--- a/css/styles.css
+++ b/css/styles.css
@@ -11905,3 +11905,44 @@ header .container {
   background: linear-gradient(to right, #6a11cb, #2575fc); /* Invertir colores al hacer hover */
   transform: scale(1.05);
 }
+
+.nav-link {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  padding-bottom: 5px;
+  position: relative;
+}
+
+/* Subrayado oculto al principio */
+.nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  background-color: blue;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+/* Se activa solo cuando se hace scroll */
+.navbar.scrolled .nav-link.active::after {
+  transform: scaleX(1);
+}
+
+.navbar-custom {
+  transition: all 0.1s ease-in-out;
+}
+
+.navbar-custom.scrolled {
+  background-color: rgba(255, 255, 255, 0.95); /* Fondo semitransparente */
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px 0;
+}
+
+.footer-custom {
+  box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1); /* Sombra superior */
+  transition: all 0.3s ease-in-out;
+}
