--- a/css/styles.css
+++ b/css/styles.css
@@ -11946,3 +11946,25 @@ header .container {
   box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1); /* Sombra superior */
   transition: all 0.3s ease-in-out;
 }
+
+.nav-link {
+  position: relative;
+  display: inline-block; /* Para que la línea ocupe solo el ancho del texto */
+  padding-bottom: 5px; /* Espacio para la línea */
+}
+
+.nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0; /* Inicia sin ancho */
+  height: 2px;
+  background-color: blue;
+  transition: width 0.3s ease-in-out;
+}
+
+.nav-link.active::after, 
+.nav-link:hover::after {
+  width: 100%; /* Se extiende solo hasta el ancho del texto */
+}
